k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wishlists
  labels:
    app: wishlists
spec:
  replicas: 1 #2?
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2 #0%
      maxUnavailable: 0 #50%
  selector:
    matchLabels:
      app: wishlists
  template:
    metadata:
      labels:
        app: wishlists
    spec:
      restartPolicy: Always
      containers:
      - name: wishlists
        image: cluster-registry:5000/wishlists:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          initialDelaySeconds: 10
          periodSeconds: 60
          httpGet:
           path: /health
           port: 8080
        resources:
          limits:
            cpu: "0.50"
            memory: "128Mi"
          requests:
            cpu: "0.25"
            memory: "64Mi"

# for PostgreSQL needed to be changed
