k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wishlists
 #labels:
 #app: wishlists
spec:
  type: ClusterIP
  selector:
    app: wishlists
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
#spec:
  #selector:
    #app: wishlists
  #type: ClusterIP
  #internalTrafficPolicy: Cluster
  #ports:
    #- name: 8080-tcp
      #protocol: TCP
      #port: 8080
      #targetPort: 8080

# for PostgreSQL needed to be changed
